# portfolio

./: .gitignore  README.md
API_data_proccessing/: README.md  script.js
API_data_proccessing/pages/: home.html  search.html
Image Optimizer/: main.py  pyproject.toml
Image Optimizer Project/: README.md
Pokemon Team API project/pages/: team.html
Pokemon Team API project/styles/: home.css
ToDoList Project/: package.json
ToDoList_Nodejs/: index.js  package-lock.json
ToDoList_Nodejs/views/: todo.ejs
helloWorld/: README.md  helloWorld.beam  helloWorld.erl
python mini-projects/: readme.md
python mini-projects/Tire Volumes/: tire_volume.py
python mini-projects/accidents/: accidents.py  example_accidents.py
python mini-projects/address/: test_address.py
python mini-projects/area code/: add_area_code.py
python mini-projects/boxes/: boxes.py
python mini-projects/calulator/: Nilestone.py  milestone_calculator.py  milestone_calculator_test.py
python mini-projects/chemistry/: chemistry.py  test_chemistry_1.py
python mini-projects/cone volume/: cone_volume.py
python mini-projects/discounts/: discounts.py
python mini-projects/esteem/: esteem.py
python mini-projects/family history/: family_history.py
python mini-projects/fitness/: fitness.py
python mini-projects/fuel usage/: fuel_usage.py
python mini-projects/heartRate/: cp1_HeartRate.py  heart_rate.py
python mini-projects/names/: test_names.py
video_game/: README.md
webscrapper/: pyproject.toml
webscrapper project/: README.md
webscrapper/tests/: test_classes.py
(+15 files in other folders)
